--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "sablecc",
     "sable"
   ],
-  "repository": "https://github.com/YtvwlD/language-sablecc-textmate",
+  "repository": "git@github.com:YtvwlD/language-sablecc-textmate",
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
